--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <junit5.version>5.4.2</junit5.version>
         <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
+        <javaee-jaxb-api.version>2.3.0</javaee-jaxb-api.version>
+        <javaee-javax-activation.version>1.1.1</javaee-javax-activation.version>
     </properties>
 
     <dependencyManagement>
@@ -81,6 +83,18 @@
                     <artifactId>junit</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${javaee-jaxb-api.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>${javaee-javax-activation.version}</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
